# Xermu

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_output.txt  code_cache.hpp  emitter.hpp  executor.cpp  executor.hpp  main.cpp  stderr.txt  trace.hpp  trace_builder.cpp
doc/: DESIGN.md  NBOXKRNL_INTEGRATION.md  NV2A_Emulation_Vulkan.md  PROGRESS.md
doc/reference/: CxbxFixedFunctionPixelShader.hlsl  CxbxFixedFunctionPixelShader.hlsli  CxbxFixedFunctionVertexShader.hlsl  CxbxFixedFunctionVertexShaderState.hlsli  CxbxNV2AMathHelpers.hlsli  CxbxNV2APixelShaderConstants.hlsli  CxbxPGRAPHRegs.hlsli  CxbxPixelShaderFunctions.hlsli  CxbxPixelShaderInput.hlsli  CxbxRegisterCombinerInterpreter.hlsl  CxbxRegisterCombinerInterpreterState.hlsli  CxbxScreenspaceTransform.hlsli  CxbxVertexFetch.hlsli  CxbxVertexOutputFooter.hlsli  CxbxVertexShaderCommon.hlsli  CxbxVertexShaderInterpreter.hlsl  CxbxVertexShaderInterpreterState.hlsli  CxbxVertexShaderPassthrough.hlsl
src/: code_cache.hpp  context.hpp  dispatch_trace.asm  emitter.hpp  executor.cpp  executor.hpp  fault_handler.hpp  insn_dispatch.hpp  main.cpp  mmio.hpp  pe_loader.hpp  platform.hpp  test_pe_loader.cpp  test_pgraph.cpp  test_runner.cpp  trace.hpp  trace_builder.cpp  trace_builder.hpp  xbe_loader.hpp  xbox.hpp
src/cpu/: code_cache.hpp  context.hpp  emitter.hpp  executor.cpp  executor.hpp  fault_handler.hpp  insn_dispatch.hpp  jit_helpers.cpp  jit_helpers.hpp  mmio.hpp  platform.hpp  privileged.cpp  trace.hpp  trace_builder.cpp  veh_handler.cpp
src/gpu/: gen_shader_inc.cmake  gen_spirv_header.cmake  nv2a_shaders.hpp  nv2a_vk_renderer.cpp  nv2a_vk_renderer.hpp
src/gpu/shaders/: nv2a_draw.frag.glsl  nv2a_draw.frag.glsl.inc  nv2a_draw.vert.glsl  nv2a_draw.vert.glsl.inc  pushbuf_parse.comp.glsl  pushbuf_parse.comp.glsl.inc  scanout.frag.glsl  scanout.frag.glsl.inc  scanout.vert.glsl  scanout.vert.glsl.inc
src/tests/: advanced.asm  apu.asm  apu_voice.asm  esp_lea.asm  fastmem.asm  flow.asm  harness.inc  hle.asm  ide.asm  linking.asm  misc.asm  nv2a_gpu.asm  nv2a_timer.asm  paging.asm  pcrtc.asm  pfifo.asm  ptimer_alarm.asm  smbus.asm  sse.asm  string.asm  test_block_rw.cpp  test_nboxkrnl_boot.cpp  test_nboxkrnl_e2e.cpp  test_nboxkrnl_io.cpp  test_nboxkrnl_keys.cpp  test_nboxkrnl_paths.cpp  test_nboxkrnl_ports.cpp  test_pe_loader.cpp  test_pgraph.cpp  test_runner.cpp  ud2.asm  xbox.asm  xbox_io.asm
src/xbox/: acpi.hpp  address_map.hpp  apu.hpp  cmos.hpp  emu_thread.hpp  flash.hpp  ide.hpp  ioapic.hpp  misc_io.hpp  nboxkrnl_boot.hpp  nboxkrnl_host.hpp  nboxkrnl_io.hpp  nboxkrnl_keys.hpp  nboxkrnl_paths.hpp  nv2a.hpp  nv2a_thread.hpp  pci.hpp  pe_loader.hpp  pgraph.hpp  pic.hpp  pit.hpp  ram_mirror.hpp  setup.hpp  smbus.hpp  usb.hpp
src/xbox/hle/: bootstrap.hpp  hle_kernel.hpp  xbe_loader.hpp
tests/: advanced.asm  alu.asm  apu.asm  div_error  div_error.asm  esp_mem.asm  flash.asm  flash_cmd.asm  fpu.asm  gdt_tss.asm  hle.asm  ide.asm  ide_dma.asm  indirect.asm  interrupt.asm  ioapic.asm  memory.asm  misc.asm  mmio_alu.asm  mtrr.asm  nv2a_gpu.asm  nv2a_pmc.asm  pbus.asm  pci.asm  pfifo.asm  pic.asm  pit.asm  pramdac.asm  privileged.asm  pvideo.asm  segment.asm  smbus.asm  smbus_smc.asm  smc.asm  smc_stress.asm  usb.asm  usb_ohci.asm
